--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+  <title>Coffee Reads</title>
 </head>
 <body>
+  <h1>Coffee Reads</h1>
+  <h2>About Us</h2>
+  <h2>Menu</h2>
+  <h2>Contact</h2>
 </body>
 </html>
